# derKilate

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  make.rb
include/kilate/: config.h  environment.h  error.h  file.h  hashmap.h  interpreter.h  lexer.h  native.h  node.h  parser.h  string.h  vector.h
include/kilate/util/: native.h
include/mate/: config.h  environment.h  hashmap.h  interpreter.h  lexer.h  native.h  node.h  parser.h  string.h
include/mate/util/: native.h
src/: config.c  debug.c  environment.c  error.c  file.c  hashmap.c  interpreter.c  lexer.c  main.c  native.c  node.c  parser.c  string.c  vector.c
src/util/: native.c
std/native/include/: io.h
std/native/src/: io.c  main.c
